--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<link rel="stylesheet" href="css/materialize.min.css">
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
-<body>
+<body> 
 	<h1 align="center" class='titulo'> Minimos cuadrados </h1>
 	<div align="center">
 		<div class = "row">
@@ -30,6 +30,11 @@
 	</div>
 	<p align="center">
 	   <label>
+        <input class="with-gap" name="nolineal" id="lineal" type="radio"  />
+        <span> Lineal </span>
+      </label>
+	
+	   <label>
         <input class="with-gap" name="nolineal" id="nolineal" type="radio"  />
         <span> No lineal </span>
       </label>
@@ -41,7 +46,7 @@
 				<p> N </p>
 			</td>
 			<td >
-				<p>  X </p>  
+				<p> X </p>  
 			</td>
 			<td >
 				<p> Y </p> 
@@ -64,7 +69,7 @@
 <hr>
 <h2 class="titulo">Resultados</h2>
 
-<table class="container" id="tabla2" border="1" width="50%" align="center">
+<table class="container" id="tabla2" border="1" align="center">
 	<thead >
 		<tr class="colortable">
 			<td >
@@ -88,23 +93,54 @@
 		
 	</tbody>
 </table>
-<button  onclick="borrarFila()" class="btn waves-effect waves-light orange" type="submit" name="action"> Clear
+	<button  onclick="borrarFila()" class="btn waves-effect waves-light orange" type="submit" name="action"> Clear
 		<i class="material-icons right">clear</i>
 	</button>
 	
-<button  onclick="borrarTabla()" class="btn waves-effect waves-ligh red" type="submit"  name="action"> AllClear
+	<button  onclick="borrarTabla()" class="btn waves-effect waves-ligh red" type="submit"  name="action"> AllClear
 		<i class="material-icons right"> cancel</i>
 	</button>
 	<button  onclick="drawTable()" class="btn waves-effect waves-light" type="submit" name="action"> Draw
-			<i class="material-icons right">grid_on</i>
-		</button>
+		<i class="material-icons right">grid_on</i>
+	</button>
+<div id="formula">
+	
+</div>	
+<hr>
+<br>
+<table class="container">
+	<tr>
+		<td>
+			<p class="formula"> Normal </p> 
+		</td>
+		<td>
+			 <p class="formula"> Con MMC </p> 
+		</td>
+	</tr>
+	<tr>
+		<td>
+			<div id="tester1" style="width:600px;height:250px;"></div>
+		</td>
+		<td>
+			<div id="tester" style="width:600px;height:250px;"></div>
+		</td>
+	</tr>	
+</table>		
 
 
-<div id="tester" style="width:600px;height:250px;"></div>
-<script src="script.js"></script>
-<script src="plotly-latest.min.js"></script>
+	<script src="script.js"></script>
+	<script src="plotly-latest.min.js"></script>
 <script>
-	function drawTable() {
+	
+		function drawTable() {
+		TESTER1 = document.getElementById('tester1');
+		Plotly.plot( TESTER1, [{
+		x: getX(lista),
+		y: getY1(lista), 
+		
+		}], 
+		{ margin: { t: 0 } } );	
+
 		TESTER = document.getElementById('tester');
 		Plotly.plot( TESTER, [{
 		x: getX(lista),
@@ -112,7 +148,10 @@
 		}], 
 		{ margin: { t: 0 } } );
 		
+	
 	}
+		
+
 </script>
 <script src="js/materialize.min.js"></script>
 </body>
